<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learn2fantasy.learn2fantasy.RankingTimeActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/RankTime_containerBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/RankTime_pts"
            android:layout_margin="10dp"
            android:text="@string/colocacao_pontuacao_string"
            android:onClick="escolherRank"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/RankTime_gols"
            android:layout_margin="10dp"
            android:text="@string/colocacao_gols_string"
            android:onClick="escolherRank"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/rankTime_col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/rankTime_lista"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/rankTime_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/rankTime_lista"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/rankTime_esc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/rankTime_lista"
        app:layout_constraintRight_toRightOf="parent"/>

    <ListView
        android:id="@+id/rankTime_lista"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
