<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/menu_grama"
        android:contentDescription="@string/grama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grama" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout15"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/menu_bolinha"
            android:contentDescription="@string/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/bolinha"
            android:layout_margin="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout15"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout15"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout15" />
        <TextView
            android:id="@+id/menu_nomeApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/app_name"
            android:textColor="@color/branco"
            android:textStyle="bold"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout15"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout15"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout15"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/constraintLayout2">

        <Button
            android:id="@+id/menu_compJog"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/comparar_jogador_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/menu_rankJog"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/ranking_jogador_string"
            app:layout_constraintBottom_toTopOf="@+id/menu_compJog"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/menu_infoJog"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/info_jogador_string"
            app:layout_constraintBottom_toTopOf="@+id/menu_rankJog"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/constraintLayout">

        <Button
            android:id="@+id/menu_compTimes"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/comparar_time_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_rankTimes" />

        <Button
            android:id="@+id/menu_rankTimes"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/ranking_time_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_infoTimes" />

        <Button
            android:id="@+id/menu_infoTimes"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/info_time_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
