...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/escJogComp_botao"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:text="@string/comparar_string"
        android:onClick="irCompJog"
        app:layout_constraintBottom_toBottomOf="parent"
...
    <TextView
        android:id="@+id/escJogComp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogadores_a_serem_comparados_string"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/escJogComp_listView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/escJogComp_jogador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
